--- a/Css/main.css
+++ b/Css/main.css
@@ -917,7 +917,10 @@ i{
   .more-project{
     text-align: center;
     padding: .3rem .6rem;
-    display: inline-block;
+    display: block;
+    margin: auto;
+    width: 150px;
+    max-width: 200px;
     color: var(--animation-color-1);
     font-size: var(--github-link);
     font-weight: 700;
